first pass of Zhengguo loc

--- a/localization/english/missions/chinese_empire_missions_l_english.yml
+++ b/localization/english/missions/chinese_empire_missions_l_english.yml
@@ -7,77 +7,77 @@
 
 #Missions
 
- missions_chinese_empire_task_1:0 "Reform Civil Registration"
- missions_chinese_empire_task_1_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil13!"
+ missions_chinese_empire_task_1: "Reform Civil Registration"
+ missions_chinese_empire_task_1_DESC: "Now that we have assumed control of the #E Chinese Empire#!, we must conduct a census in order to fully ascertain the strength of [ROOT.GetCountry.GetName]. The Wars of Unification have left their mark on the countryside, and there is much work to do, especially when it comes to reforming our bureaucracy. \n\n\n\n\n\n\n\n\n\n\n@china_mil13!"
 
- missions_chinese_empire_task_2:0 "Cornerstone of Empire"
- missions_chinese_empire_task_2_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil12!"
+ missions_chinese_empire_task_2: "Cornerstone of Empire"
+ missions_chinese_empire_task_2_DESC: "One of the cornerstones of a fairly administered Empire is the rule of law, and with [ROOT.GetCountry.GetRuler.GetName] at the helm, a sense of justice and harmony has returned to [ROOT.GetCountry.GetName].\n\n\n\n\n\n\n\n\n\n\n@china_mil12!"
 
- missions_chinese_empire_task_3:0 "Expand Great Wall"
- missions_chinese_empire_task_3_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil14!"
+ missions_chinese_empire_task_3: "Expand Great Wall"
+ missions_chinese_empire_task_3_DESC: "The threat of barbarian incursion remains ever present, and [ROOT.GetCountry.GetRuler.GetName] has no desire to see [ROOT.GetCountry.GetRuler.GetHerHis] Empire despoiled by savage steppe riders. Expand our fortifications and place guards upon the Wall, lest we find ourselves in a difficult situation! \n\n\n\n\n\n\n\n\n\n\n@china_mil14!"
 
- missions_chinese_empire_task_4:0 "The Nomadic Frontier"
- missions_chinese_empire_task_4_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@east_steppemil9!"
+ missions_chinese_empire_task_4: "The Nomadic Frontier"
+ missions_chinese_empire_task_4_DESC: "It is true that we control vast swathes of the western steppes, and yet our vast holdings are only the gateway to an extensive frontier - the homeland of the dreaded nomads, who oftentimes appear on the horizon like a stormcloud. Let us take the fight to them, for once. \n\n\n\n\n\n\n\n\n\n\n@east_steppemil9!"
 
- missions_chinese_empire_task_5:0 "The Yue Tribes"
- missions_chinese_empire_task_5_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil4!"
+ missions_chinese_empire_task_5: "The Yue Tribes"
+ missions_chinese_empire_task_5_DESC: "The #E Yue Tribes#! to the south have always been a bit of a nuisance, but now that [ROOT.GetCountry.GetRuler.GetName] finally has the time to devote to the problems we have with the squabbling tribesmen, the [ROOT.GetCountry.GetRulerTitle] vows that the southern coasts will be ours.\n\n\n\n\n\n\n\n\n\n\n@china_mil4!"
 
- missions_chinese_empire_task_6:0 "The Southern Coast"
- missions_chinese_empire_task_6_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil8!"
+ missions_chinese_empire_task_6: "The Southern Coast"
+ missions_chinese_empire_task_6_DESC: "The sparsely-populated southern coastlands would make splendid additions to the borders of [ROOT.GetCountry.GetName] - the time has come to send our settlers to the region.\n\n\n\n\n\n\n\n\n\n\n@china_mil8!"
 
- missions_chinese_empire_task_7:0 "Tribes of the Mountains"
- missions_chinese_empire_task_7_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@tibet_mil4!"
+ missions_chinese_empire_task_7: "Tribes of the Mountains"
+ missions_chinese_empire_task_7_DESC: "Although the people of the mountains have a reputation for being suspicious of outsiders, they do not have a choice anymore - they are subjects of [ROOT.GetCountry.GetName] and cannot remain separated from the rest of our country. The time has come for them to assimilate to our ways, even if they resist our efforts.\n\n\n\n\n\n\n\n\n\n\n@tibet_mil4!"
 
- missions_chinese_empire_task_8:0 "Examination System"
- missions_chinese_empire_task_8_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil13!"
+ missions_chinese_empire_task_8: "Examination System"
+ missions_chinese_empire_task_8_DESC: "In order to ensure that only the best and brightest scholars living in [ROOT.GetCountry.GetName] obtain positions within the #Y Imperial Bureaucracy#!, [ROOT.GetCountry.GetRuler.GetName] has insisted that we institute an official #Y Examination System#! that will test applicants on their knowledge of the Classics.\n\n\n\n\n\n\n\n\n\n\n@china_mil13!"
 
- missions_chinese_empire_task_9:0 "Build an Imperial Road"
- missions_chinese_empire_task_9_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@italic_mil27!"
+ missions_chinese_empire_task_9: "Build an Imperial Road"
+ missions_chinese_empire_task_9_DESC: "What good is a large Empire if the cities and territories remain separated from one another? Let us build an #Y Imperial Road#!, one that will connect the far-flung provinces of glorious [ROOT.GetCountry.GetName].\n\n\n\n\n\n\n\n\n\n\n@italic_mil27!"
 
- missions_chinese_empire_task_10:0 "Terracotta Army"
- missions_chinese_empire_task_10_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil9!"
+ missions_chinese_empire_task_10: "Terracotta Army"
+ missions_chinese_empire_task_10_DESC: "[ROOT.GetCountry.GetRuler.GetName] has decreed that an #Y Imperial Mausoleum#!, one fit for the bones of the first #Y Chinese Emperor#!, shall be built in [ROOT.GetCountry.GetName]. The [ROOT.GetCountry.GetRulerTitle] has also called for an army of #T Terracotta Warriors#! to be placed inside of [ROOT.GetCountry.GetRuler.GetHerHis] tomb.\n\n\n\n\n\n\n\n\n\n\n@china_mil9!"
 
- missions_chinese_empire_task_11:0 "Envoys to the West"
- missions_chinese_empire_task_11_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil6!"
+ missions_chinese_empire_task_11: "Envoys to the West"
+ missions_chinese_empire_task_11_DESC: "[ROOT.GetCountry.GetRuler.GetName] has heard stories from traders of magnificent horses @steppe_horses! that are found in the west. These legendary mounts possess an unparalleled beauty and vigor and are known as the #T Heavenly Horses#!. The [ROOT.GetCountry.GetRulerTitle] demands that we must have these animals for [ROOT.GetCountry.GetName] and has sent envoys west.\n\n\n\n\n\n\n\n\n\n\n@china_mil6!"
 
- missions_chinese_empire_task_12:0 "Heavenly Horses"
- missions_chinese_empire_task_12_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil7!"
+ missions_chinese_empire_task_12: "Heavenly Horses"
+ missions_chinese_empire_task_12_DESC: "At last, the #T Heavenly Horses#! @steppe_horses! belong to [ROOT.GetCountry.GetName]! We have taken these exceptional mounts for ourselves, and our cavalry and horse archers are deadlier than ever!\n\n\n\n\n\n\n\n\n\n\n@china_mil7!"
 
- missions_chinese_empire_task_13:0 "Kingdom of Joseon"
- missions_chinese_empire_task_13_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil15!"
+ missions_chinese_empire_task_13: "Kingdom of Joseon"
+ missions_chinese_empire_task_13_DESC: "The kingdom of #E Joseon#! was once a powerful state on our borders, but the time has come to dismantle their rump states and add them to the glorious [ROOT.GetCountry.GetAdjective] peace that we have brought to the #E Middle Kingdom#!.\n\n\n\n\n\n\n\n\n\n\n@china_mil15!"
 
- missions_chinese_empire_task_14:0 "Kingdom of Au Lac"
- missions_chinese_empire_task_14_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil5!"
+ missions_chinese_empire_task_14: "Kingdom of Au Lac"
+ missions_chinese_empire_task_14_DESC: "We have heard of the #E Au Lac#! people and their claims to power, and [ROOT.GetCountry.GetRuler.GetName] was impressed to learn the true extent of their strength. Unfortunately for them, the time has come to destroy their burgeoning civilization - we must be the only powerbrokers in the region.\n\n\n\n\n\n\n\n\n\n\n@china_mil5!"
 
- missions_chinese_empire_task_15:0 "Silk and Salt"
- missions_chinese_empire_task_15_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil13!"
+ missions_chinese_empire_task_15: "Silk and Salt"
+ missions_chinese_empire_task_15_DESC: "Our silk @silk! workshops and salt @salt! farms fill the coffers of [ROOT.GetCountry.GetName] will an ocean of gold and silver coins - not only do we produce vast amounts of salt, a basic requirement of life, but we also are known for the luxurious silks that we export across the civilized world.\n\n\n\n\n\n\n\n\n\n\n@china_mil13!"
 
- missions_chinese_empire_task_16:0 "Meritocracy"
- missions_chinese_empire_task_16_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@egypt_mil19!"
+ missions_chinese_empire_task_16: "Meritocracy"
+ missions_chinese_empire_task_16_DESC: "We have abandoned the insidious allure of nepotism to ensure that only the most qualified candidates can obtain positions within the #Y Imperial Bureaucracy#!. [ROOT.GetCountry.GetRuler.GetName] refuses to deal with the spoiled sons of provincial governors that expect cushy appointments, instead preferring to rely on a merit-based system.\n\n\n\n\n\n\n\n\n\n\n@egypt_mil19!"
 
- missions_chinese_empire_task_17:0 "Grand Commanderies"
- missions_chinese_empire_task_17_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@event_pic7!"
+ missions_chinese_empire_task_17: "Grand Commanderies"
+ missions_chinese_empire_task_17_DESC: "Not only do we have soldiers stationed throughout [ROOT.GetCountry.GetName] but [ROOT.GetCountry.GetRuler.GetName] has insisted upon building #E Courts of Law#! that will serve as #T Grand Commanderies#! for our troops. The [ROOT.GetCountry.GetRulerTitle] insists that this manner of organizing our prefects will be of great use.\n\n\n\n\n\n\n\n\n\n\n@event_pic7!"
 
- missions_chinese_empire_task_18:0 "Inward Perfection"
- missions_chinese_empire_task_18_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@italic_mil3!"
+ missions_chinese_empire_task_18: "Inward Perfection"
+ missions_chinese_empire_task_18_DESC: "What countries can compare with grand [ROOT.GetCountry.GetName]? [ROOT.GetCountry.GetRuler.GetName] has ushered in an era of peace and prosperity; the harvests are full, the people are content, and everywhere one looks, there can be found an inward perfection.\n\n\n\n\n\n\n\n\n\n\n@italic_mil3!"
 
- missions_chinese_empire_task_19:0 "Silk Road"
- missions_chinese_empire_task_19_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@tibet_mil11!"
+ missions_chinese_empire_task_19: "Silk Road"
+ missions_chinese_empire_task_19_DESC: "We are fully aware of the appetites around the world for our silk @silk! exports - we receive countless coins from the West, for the sons and daughters of the barbarian kings love to drape themselves in silk garments. Let us manufacture as much of this rare textile as we can - the mulberry worm spins threads of gold.\n\n\n\n\n\n\n\n\n\n\n@tibet_mil11!"
 
- missions_chinese_empire_task_20:0 "The Advent of Paper"
- missions_chinese_empire_task_20_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@italic_mil18!"
+ missions_chinese_empire_task_20: "The Advent of Paper"
+ missions_chinese_empire_task_20_DESC: "In our workshops, we have developed #E paper#!, which is quite useful as a medium for the written word, and [ROOT.GetCountry.GetRuler.GetName] has ordered vast quantities to be sent to [ROOT.GetCountry.GetCapital.GetName].\n\n\n\n\n\n\n\n\n\n\n@italic_mil18!"
 
- missions_chinese_empire_task_21:0 "Sail East"
- missions_chinese_empire_task_21_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@india_mil7!"
+ missions_chinese_empire_task_21: "Sail East"
+ missions_chinese_empire_task_21_DESC: "Now that dominate the land, [ROOT.GetCountry.GetRuler.GetName] has made it known that the people of [ROOT.GetCountry.GetName] shall master the seas as well. It is time to send our sailors to the east.\n\n\n\n\n\n\n\n\n\n\n@india_mil7!"
 
- missions_chinese_empire_task_22:0 "Pure Land"
- missions_chinese_empire_task_22_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@greek_mil2!"
+ missions_chinese_empire_task_22: "Pure Land"
+ missions_chinese_empire_task_22_DESC: "The many religious heresies and cults that plagued upon the populace have finally been eradicated throughout [ROOT.GetCountry.GetName] - [ROOT.GetCountry.GetRuler.GetName] has ritually purified the land, restoring a sense of harmony with the universe.\n\n\n\n\n\n\n\n\n\n\n@greek_mil2!"
 
- missions_chinese_empire_task_23:0 "Heaven's Will"
- missions_chinese_empire_task_23_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil8!"
+ missions_chinese_empire_task_23: "Heaven's Will"
+ missions_chinese_empire_task_23_DESC: "It is clear to see that the #T Will of Heaven#! is pleased with the accomplishments and deeds of [ROOT.GetCountry.GetRuler.GetName], who has faithfully led the people of [ROOT.GetCountry.GetName] into an era of unrivaled prosperity.\n\n\n\n\n\n\n\n\n\n\n@china_mil8!"
  
- missions_chinese_empire_task_24:0 "Lingqu Canal"
- missions_chinese_empire_task_24_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@india_mil1!"
+ missions_chinese_empire_task_24: "Lingqu Canal"
+ missions_chinese_empire_task_24_DESC: "[ROOT.GetCountry.GetRuler.GetName] has ordered the construction of a canal that will connect the #E Xiang River#! to the #E Li River#!. It is the hope of the [ROOT.GetCountry.GetRulerTitle] that this waterway will be used to export grain @grain!.\n\n\n\n\n\n\n\n\n\n\n@india_mil1!"
 
 
 #Events
