Mop Up Some TODO

--- a/localization/english/missions/han_missions_warring_l_english.yml
+++ b/localization/english/missions/han_missions_warring_l_english.yml
@@ -185,11 +185,11 @@
  zhengguo_canal_mod: "Zhengguo Canal"
  han_feizi_mod: "Commissioned Han Feizi"
  desc_han_final_mod: "The prestigious Han Dynasty has not only restored Jin after its partition, but also unified the Middle Kingdom."
- desc_han_yellow_river_mod: "The Yellow River has "
- desc_lobbied_as_han: "TODO"
- desc_han_capital_mod: "TODO"
- desc_zhengguo_canal_mod: "TODO"
- desc_han_feizi_mod: "TODO"
+ desc_han_yellow_river_mod: "The Yellow River is the backbone of our economy."
+ desc_lobbied_as_han: "We have been graced by the Zhou emperor."
+ desc_han_capital_mod: "The ancient city of Zheng and Han is flourishing."
+ desc_zhengguo_canal_mod: "The canal greatly increases the economic output of the region."
+ desc_han_feizi_mod: "The Han Feizi is widely read at our court."
  coalition_han_bonus: "Coalition led by Han"
  coalition_han_against_qin: "Coalition against Qin"
  han_xbows_swords: "Han Crossbows and Swords"
