--- a/localization/english/missions/yue_state_missions_l_english.yml
+++ b/localization/english/missions/yue_state_missions_l_english.yml
@@ -8,70 +8,70 @@
  #Missions
 
  missions_yue_state_task_1: "Recover Wu"
- missions_yue_state_task_1_DESC: ""
+ missions_yue_state_task_1_DESC: "The old territory of Wu was lost only some years ago to the Chu. It is paramount that we recover this core territory of ours and fortify it against further attacks.\n\n\n\n\n\n\n\n\n\n\n@china_mil9!"
 
  missions_yue_state_task_2: "Restoring Kuaiji"
- missions_yue_state_task_2_DESC: "Civil wars and Chu invasions have brought misery and destruction to the city of Kuaiji, it is time to clear the last vestiges of past woes and become a forward-looking center of the state of Yue."
+ missions_yue_state_task_2_DESC: "Civil wars and Chu invasions have brought misery and destruction to the city of Kuaiji, it is time to clear the last vestiges of past woes and become a forward-looking center of the state of Yue.\n\n\n\n\n\n\n\n\n\n\n@china_mil11!"
 
  missions_yue_state_task_3: "In Need Of Allies"
- missions_yue_state_task_3_DESC: "With our own army failing on all sides, allies are needed to help the Yue in their hour of need."
+ missions_yue_state_task_3_DESC: "With our own army failing on all sides, allies are needed to help the Yue in their hour of need.\n\n\n\n\n\n\n\n\n\n\n@china_mil6!"
 
  missions_yue_state_task_4: "Forging Bronze Swords"
- missions_yue_state_task_4_DESC: ""
+ missions_yue_state_task_4_DESC: "\n\n\n\n\n\n\n\n\n\n\n@egypt_mil19!"
 
  missions_yue_state_task_5: "Yue Of Langya"
- missions_yue_state_task_5_DESC: ""
+ missions_yue_state_task_5_DESC: "After [GetCharacter('(int32)590').GetName]'s untimely death, the state of Yue descended into chaos, as there was no designated successor. Now that we have the upper hand, our northern brethern will surely seek our protection.\n\n\n\n\n\n\n\n\n\n\n@italic_mil3!"
 
  missions_yue_state_task_6: "Horn Of Plenty"
- missions_yue_state_task_6_DESC: "Oh horn of plenty, make our lands abundantly fertile, so that some of the best rice can grow here; make our granaries stocked."
+ missions_yue_state_task_6_DESC: "Oh horn of plenty, make our lands abundantly fertile, so that some of the best rice can grow here; make our granaries stocked.\n\n\n\n\n\n\n\n\n\n\n@event_pic7!"
 
  missions_yue_state_task_7: "Restore Navy" #Yue were renowned for their strong navy which set them apart from the northern Chinese
- missions_yue_state_task_7_DESC: ""
+ missions_yue_state_task_7_DESC: "Not much is left of our once great naval fleet, but even now no power can match the Yue peoples naval skills. We should not lose time and build a fleet that is worthy of our legacy. \n\n\n\n\n\n\n\n\n\n@india_mil1!"
 
  missions_yue_state_task_8: "Island Of Yizhou"
- missions_yue_state_task_8_DESC: ""
+ missions_yue_state_task_8_DESC: "Now that we have restored our navy to is former glory, we should consider expanding our hegemony to the island of Yizhou, which is inhabited by various petty tribes; they certainly are no match for our formidable forces.\n\n\n\n\n\n\n\n\n\n@greek_mil11!"
 
  missions_yue_state_task_9: "The Thunder Strikes"
- missions_yue_state_task_9_DESC: ""
+ missions_yue_state_task_9_DESC: "Just like a thunder we have to strike fast and catch the Chu unprepared. Their demise is certain.\n\n\n\n\n\n\n\n\n\n\n@china_mil7!"
 
  missions_yue_state_task_10: "Art Of War" #by Sun Tzu
- missions_yue_state_task_10_DESC: ""
+ missions_yue_state_task_10_DESC: "Wu's most famous son, Sun Tzu, wrote his profound insights into strategy and and warfare in his classical work, the Art of War, some two centuries ago, yet it is more current than ever in this period of Warring States.\n\n\n\n\n\n\n\n\n\n\n@china_mil15!"
 
  missions_yue_state_task_11: "Revenge On Qi" #Qi led on Wuqiang and deflected the attack of Yue from Qi to Chu. Yue was then utterly defeated by Chu.
- missions_yue_state_task_11_DESC: ""
+ missions_yue_state_task_11_DESC: "The scheming #E Qi#! deflected King [GetCharacter('(int32)590').GetName]'s attack by promising that the #E Chu#! are easy prey, but our days of glory came to an end because of our folly to believe them; tell the Qi that they must submit to the Yue or else they will be utterly destroyed.\n\n\n\n\n\n\n\n\n\n\n@china_mil12!"
 
  missions_yue_state_task_12: "Magic Canal" #same as Chinese empire mission task 24
- missions_yue_state_task_12_DESC: ""
+ missions_yue_state_task_12_DESC: "[ROOT.GetCountry.GetRuler.GetName] has ordered the construction of a canal that will connect the #E Xiang River#! to the #E Li River#!. It is the hope of the [ROOT.GetCountry.GetRulerTitle] that this waterway will be used to transport troops and export grain @grain!.\n\n\n\n\n\n\n\n\n\n\n@india_mil1!"
 
  missions_yue_state_task_13: "Austronesian Tribute"
- missions_yue_state_task_13_DESC: ""
+ missions_yue_state_task_13_DESC: "Merchants from all across the world sail from the waters of the Mare Luzon to the port district of our island of Yizhou. They tell us of primitive tribes trading in the finest goods; demanding tribute from them would certainly benefit our treasury.\n\n\n\n\n\n\n\n\n\n\n@india_mil7!"
 
  missions_yue_state_task_14: "Lady Of Yue" #Yuenü was a swordswoman from the state of Yue. She is also known as Maiden of the Southern Forest.
- missions_yue_state_task_14_DESC: ""
+ missions_yue_state_task_14_DESC: "Tales are still told about Yuenü, the Lady of Yue. The maiden's legendary military prowess is said to have surpassed even that of most men.\n\n\n\n\n\n\n\n\n\n\n@china_mil8!"
 
  missions_yue_state_task_15: "Conquer Ouyue"
- missions_yue_state_task_15_DESC: ""
+ missions_yue_state_task_15_DESC: "The #E Ouyue#! tribe to the south has always been a bit of a nuisance, but now that [ROOT.GetCountry.GetRuler.GetName] finally has the time to devote to the problems we have with the squabbling tribesmen, the [ROOT.GetCountry.GetRulerTitle] vows that the raids will be ended once and for all.\n\n\n\n\n\n\n\n\n\n\n@tibet_mil4!"
 
  missions_yue_state_task_16: "March On Minyue"
- missions_yue_state_task_16_DESC: ""
+ missions_yue_state_task_16_DESC: "Although the people of the mountains, the Minyue, have a reputation for being suspicious of outsiders, they do not have a choice anymore - they are subjects of [ROOT.GetCountry.GetName] and cannot remain separated from the rest of our country. The time has come for them to assimilate to our ways, even if they resist our efforts.\n\n\n\n\n\n\n\n\n\n\n@china_mil4!"
 
  missions_yue_state_task_17: "Invade Nanyue"
- missions_yue_state_task_17_DESC: ""
+ missions_yue_state_task_17_DESC: "The sparsely-populated southern coastlands would make splendid additions to the borders of [ROOT.GetCountry.GetName] - the time has come to incorporate the Nanyue people into our emergent state.\n\n\n\n\n\n\n\n\n\n\n@china_mil9!"
 
  missions_yue_state_task_18: "Miao Miao"
- missions_yue_state_task_18_DESC: ""
+ missions_yue_state_task_18_DESC: "The Kingdom of San Miao was defeated and conquered by our ancestor, Yu the Great, a fact that we should remind them.\n\n\n\n\n\n\n\n\n\n\n@china_mil4!"
 
  missions_yue_state_task_19: "Imprison The Hung"
- missions_yue_state_task_19_DESC: ""
+ missions_yue_state_task_19_DESC: "We have heard of the people ruled by the #E Hung Kings#! and their claims to power, and [ROOT.GetCountry.GetRuler.GetName] has created plans to destroy their burgeoning civilization - we must control all of the #E Mare Nanhai#!.\n\n\n\n\n\n\n\n\n\n\n@china_mil5!"
 
  missions_yue_state_task_20: "Reclaim The Northern Lands"
- missions_yue_state_task_20_DESC: ""
+ missions_yue_state_task_20_DESC: "The loss of our northern lands to the Chu after the disastrous campaign of King [GetCharacter('(int32)590').GetName] has started the rapid decline of Yue power. We have to demand it back or otherwise no one in China will respect us.\n\n\n\n\n\n\n\n\n\n\n@east_steppemil9!"
 
  missions_yue_state_task_21: "Forge A Royal Sword" #King Goujian had a prominent sword, so forge your own https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Sword_of_Goujian%2C_Hubei_Provincial_Museum%2C_2015-04-06_01-edit.jpg/1920px-Sword_of_Goujian%2C_Hubei_Provincial_Museum%2C_2015-04-06_01-edit.jpg
- missions_yue_state_task_21_DESC: ""
+ missions_yue_state_task_21_DESC: "\n\n\n\n\n\n\n\n\n\n\n@china_mil13!"
  
  missions_yue_state_task_22: "Unwarranted Mildness"
- missions_yue_state_task_22_DESC: "As a gesture of mildness King Goujian returned some towns to the states of Chu, Song, and Lu that the king of Wu had occupied earlier. However, these states would never show any gratefulness for which they need to be punished."
+ missions_yue_state_task_22_DESC: "As a gesture of mildness King Goujian returned some towns to the states of Chu, Song, and Lu that the king of Wu had occupied earlier. However, these states would never show any gratefulness for which they need to be punished.\n\n\n\n\n\n\n\n\n\n\n@china_mil5!"
 
 
  #Events 
