Some European Setup Changes

--- a/localization/english/ti_countries_l_english.yml
+++ b/localization/english/ti_countries_l_english.yml
@@ -502,6 +502,16 @@
  Y39: "Praetuttia"
  Y39_ADJ: "Praetuttian"
  
- #Germania because of TI rivers
- X63: "Dulgubnia"
- X63_ADJ: "Dulgubnian"
+ #New North European Tags
+ PA1: "Chasuaria"
+ PA1_ADJ: "Chasuarian"
+ PA2: "Naristia"
+ PA2_ADJ: "Naristian"
+ PA3: "Andecavia"
+ PA3_ADJ: "Andecavian"
+ PA4: "Erdinia"
+ PA4_ADJ: "Erdinian"
+ PA5: "Vellaboria"
+ PA5_ADJ: "Vellaborian"
+ PA6: "Dulgubnia"
+ PA6_ADJ: "Dulgubnian"
