about 1/3 of Zhongguo
I also tweaked some of the loc and pics for when you become emperor

--- a/localization/english/missions/chinese_empire_missions_l_english.yml
+++ b/localization/english/missions/chinese_empire_missions_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
 
- missions_chinese_empire:0 "Zhengguo"
- missions_chinese_empire_DESCRIPTION:0 "Mission description"
- missions_chinese_empire_CRITERIA_DESCRIPTION:0 "This mission will be completed when"
- missions_chinese_empire_BUTTON_TOOLTIP:0 ""
+ missions_chinese_empire: "Zhongguo"
+ missions_chinese_empire_DESCRIPTION: "After many years of devastating warfare, a new #E Emperor#! has assumed the throne of the #E Middle Kingdom#!, ushering in a new Dynasty that could rule for hundreds of years.\n\nAnd yet it is known, from the streets of [ROOT.GetCountry.GetCapital.GetName] to the barbarous wilds at the western ends of the Earth, that the #E Mandate of Heaven#! is only bestowed upon a [ROOT.GetCountry.GetRulerTitle] that is worthy. If [ROOT.GetCountry.GetRuler.GetName] wishes to see [ROOT.GetCountry.GetRuler.GetHerHis] name inscribed within the Annals of the Middle Kingdom, remembered forevermore as one of the best rulers that the land has ever had, then [ROOT.GetCountry.GetRuler.GetSheHe] must be prepared for the work that is to come."
+ missions_chinese_empire_CRITERIA_DESCRIPTION: "This mission will be completed when we bring peace and security to the #E Middle Kingdom#! by utilizing our position as [ROOT.GetCountry.GetRulerTitle] to make the lives of our subjects better."
+ missions_chinese_empire_BUTTON_TOOLTIP: "The Mandate of Heaven will remain only with those whom deserve it!"
 
 #Missions
 
@@ -17,7 +17,7 @@
  missions_chinese_empire_task_3_DESC: "The threat of barbarian incursion remains ever present, and [ROOT.GetCountry.GetRuler.GetName] has no desire to see [ROOT.GetCountry.GetRuler.GetHerHis] Empire despoiled by savage steppe riders. Expand our fortifications and place guards upon the Wall, lest we find ourselves in a difficult situation! \n\n\n\n\n\n\n\n\n\n\n@china_mil14!"
 
  missions_chinese_empire_task_4: "The Nomadic Frontier"
- missions_chinese_empire_task_4_DESC: "It is true that we control vast swathes of the western steppes, and yet our vast holdings are only the gateway to an extensive frontier - the homeland of the dreaded nomads, who oftentimes appear on the horizon like a stormcloud. Let us take the fight to them, for once. \n\n\n\n\n\n\n\n\n\n\n@east_steppemil9!"
+ missions_chinese_empire_task_4_DESC: "It is true that we control vast swathes of the western steppes, and yet our vast holdings are only the gateway to an extensive frontier - the homeland of the dreaded nomads, who oftentimes appear on the horizon like a stormcloud. Even our eastern provinces are in danger...let us take the fight to them, for once. \n\n\n\n\n\n\n\n\n\n\n@east_steppemil9!"
 
  missions_chinese_empire_task_5: "The Yue Tribes"
  missions_chinese_empire_task_5_DESC: "The #E Yue Tribes#! to the south have always been a bit of a nuisance, but now that [ROOT.GetCountry.GetRuler.GetName] finally has the time to devote to the problems we have with the squabbling tribesmen, the [ROOT.GetCountry.GetRulerTitle] vows that the southern coasts will be ours.\n\n\n\n\n\n\n\n\n\n\n@china_mil4!"
@@ -81,37 +81,37 @@
 
 
 #Events
- me_chinese_empire_1_title:0 "$missions_chinese_empire_task_1$"
- me_chinese_empire_1_desc:0 ""
- me_chinese_empire_1.a:0 ""
+ me_chinese_empire_1_title: "$missions_chinese_empire_task_1$"
+ me_chinese_empire_1_desc: "One of the first acts of the [ROOT.GetCountry.GetAdjective] [ROOT.GetCountry.GetRulerTitle] was to conduct a census all throughout [ROOT.GetCountry.GetName]. No one knows more about the devastation and suffering that has been brought to the land than [ROOT.GetCountry.GetRuler.GetName] does, but now that the era of war is over, [ROOT.GetCountry.GetRuler.GetSheHe] desired to tally those that had survived.\n\nThe imperial agents were dispatched from [ROOT.GetCountry.GetCapital.GetName] and they returned a few months later, their mission complete. Nodding approvingly as [ROOT.GetCountry.GetRuler.GetSheHe] read through the scrolls that contained the detailed information that [ROOT.GetCountry.GetRuler.GetSheHe] requested, [ROOT.GetCountry.GetRuler.GetFirstName] turned to an advisor and remarked."
+ me_chinese_empire_1.a: "I rule over a thriving and prosperous people - I am blessed"
 
- me_chinese_empire_2_title:0 "$missions_chinese_empire_task_2$"
- me_chinese_empire_2_desc:0 ""
- me_chinese_empire_2.a:0 ""
+ me_chinese_empire_2_title: "$missions_chinese_empire_task_2$"
+ me_chinese_empire_2_desc: "Addressing [ROOT.GetCountry.GetRuler.GetHerHis] advisors one morning, the [ROOT.GetCountry.GetRulerTitle] [ROOT.GetCountry.GetRuler.GetName] explained why [ROOT.GetCountry.GetRuler.GetSheHe] had reformed the laws of [ROOT.GetCountry.GetName].\n\n'There have been many years where the only real authority in the land was violence - the people have had to suffer under the whims of cruel and tyrannical warlords. How many times have I personally read accounts of rampaging armies stealing the grain from a province? I will not condone such beastly behavior! [ROOT.GetCountry.GetName] will be a land of laws, where the landowner is fairly compensated when an injury has been committed against him - a place where the aggrieved can seek their satisfaction in a Court of Laws. All that desire to be citizens of a thriving Empire shall see their dreams come true! Have I not proven that all is possible?'\n\nAt this proclamation, the entire court bowed their heads in respect."
+ me_chinese_empire_2.a: "Your wisdom is boundless, my [ROOT.GetCountry.GetRulerTitle]"
 
- me_chinese_empire_3_title:0 "$missions_chinese_empire_task_3$"
- me_chinese_empire_3_desc:0 ""
- me_chinese_empire_3.a:0 ""
+ me_chinese_empire_3_title: "$missions_chinese_empire_task_3$"
+ me_chinese_empire_3_desc: "All throughout [ROOT.GetCountry.GetName], the system of walls and fortifications built by Kings and Warlords have been expanded by [ROOT.GetCountry.GetRuler.GetName], who earnestly seeks to protect the [ROOT.GetCountry.GetAdjective] people from the threat of barbarian invasion.\n\nAs architects from [ROOT.GetCountry.GetCapital.GetName] arrive to their postings out in the provinces, the [ROOT.GetCountry.GetRulerTitle] is content in the knowledge that our people will be safe for many years to come."
+ me_chinese_empire_3.a: "Good walls make for good neighbors..."
 
- me_chinese_empire_4_title:0 "$missions_chinese_empire_task_4$"
- me_chinese_empire_4_desc:0 ""
- me_chinese_empire_4.a:0 ""
+ me_chinese_empire_4_title: "$missions_chinese_empire_task_4$"
+ me_chinese_empire_4_desc: "Although many civilized lands have been brought into the harmonious fold of [ROOT.GetCountry.GetName], the barbarian kingdoms on our borders have cast their greedy eyes on the possessions of [ROOT.GetCountry.GetRuler.GetName] and beliveve that they have the strength to take what they desire without repurcussion.\n\nLittle do they know that [ROOT.GetCountry.GetRuler.GetFirstName] has made bold moves of [ROOT.GetCountry.GetRuler.GetHerHis] own - the [ROOT.GetCountry.GetAdjective] armies will soon be headed to the steppes in order to challenge the nomands on their own turf."
+ me_chinese_empire_4.a: "All shall submit to the authority of the Emperor"
 
- me_chinese_empire_5_title:0 "$missions_chinese_empire_task_5$"
- me_chinese_empire_5_desc:0 ""
- me_chinese_empire_5.a:0 ""
+ me_chinese_empire_5_title: "$missions_chinese_empire_task_5$"
+ me_chinese_empire_5_desc: "The southern jungles have long been the realm of the #E Yue#! tribes, who have been forced to bow their heads before the might of [ROOT.GetCountry.GetName].\n\nNot only have the Imperial Armies taken control of many of the provinces, but further claims have been prepared and distant regions have been filled with [ROOT.GetCountry.GetAdjective] colonists. By hook or by crook, our people will take this land for themselves - nothing will prevent us."
+ me_chinese_empire_5.a: "The south must surrender! We will not tolerate aggressors on our borders"
 
- me_chinese_empire_6_title:0 "$missions_chinese_empire_task_6$"
- me_chinese_empire_6_desc:0 ""
- me_chinese_empire_6.a:0 ""
+ me_chinese_empire_6_title: "$missions_chinese_empire_task_6$"
+ me_chinese_empire_6_desc: "We have received word in [ROOT.GetCountry.GetCapital.GetName] from the generals fighting in the far south. They state that we are not encountering any serious resistance, and that, given enough time, our forces will finish off the remaining tribes in the region. Colonists have already arrived in the #E Jiao#! region, and our people are beginning to build homes and settlements for themselves."
+ me_chinese_empire_6.a: "Then all is proceeding according to plan"
 
- me_chinese_empire_7_title:0 "$missions_chinese_empire_task_7$"
- me_chinese_empire_7_desc:0 ""
- me_chinese_empire_7.a:0 ""
+ me_chinese_empire_7_title: "$missions_chinese_empire_task_7$"
+ me_chinese_empire_7_desc: "The wars in the south are very distant from [ROOT.GetCountry.GetCapital.GetName], and yet every morning, a series of messages arrives for the [ROOT.GetCountry.GetRulerTitle] [ROOT.GetCountry.GetRuler.GetName], who has taken a personal interest in the conflicts.\n\nOur military advisors inform [ROOT.GetCountry.GetRuler.GetFirstName] that the tribes in the mountains are being subdued, but the people are in desperate need of the civilizing influences of the [ROOT.GetCountry.GetAdjective]. Knowing what must be done, the [ROOT.GetCountry.GetRulerTitle] made the following decree that very same day."
+ me_chinese_empire_7.a: "Send agents to the region in order to civilize the locals"
 
- me_chinese_empire_8_title:0 "$missions_chinese_empire_task_8$"
- me_chinese_empire_8_desc:0 ""
- me_chinese_empire_8.a:0 ""
+ me_chinese_empire_8_title: "$missions_chinese_empire_task_8$"
+ me_chinese_empire_8_desc: "The hand of [ROOT.GetCountry.GetRuler.GetName] can be found throughout the #E Imperial Examination System#! that has just been implemented throughout the lands of [ROOT.GetCountry.GetName], for the wise ruler has a keen interest in ensuring that the bureaucracies of the country are filled with those deserving of the job.\n\nAn intimate knowledge of the laws of the land are required, but [ROOT.GetCountry.GetRuler.GetFirstName] wants advisors that are well-rounded individuals, so candidates must be intimately acquainted with the classics and must be able to recite the writings of the sages by heart.\n\nMany have attempted to graduate since the tests have been implemented, but not everyone passes the grueling series of exams. Thankfully for [ROOT.GetCountry.GetRuler.GetFirstName], the first cohort of graduates has arrived in the capital, ready to offer their services to the state."
+ me_chinese_empire_8.a: "Welcome to your new home, my Lords...now let us get to work"
 
  me_chinese_empire_9_title:0 "$missions_chinese_empire_task_9$"
  me_chinese_empire_9_desc:0 ""
@@ -219,9 +219,9 @@
  me_chinese_empire_2400_desc:0 ""
  me_chinese_empire_2400.a:0 ""
  
- me_chinese_empire_90_title:0 "The Empire of China"
- me_chinese_empire_90_desc:0 ""
- me_chinese_empire_90.a:0 ""
+ me_chinese_empire_90_title: "The Empire of China"
+ me_chinese_empire_90_desc: "After many years of ruinous warfare that spread death and devastation across the entirety of the #E Middle Kingdom#!, [ROOT.GetCountry.GetRuler.GetName] has defeated all other claimants to the throne and has established [ROOT.GetCountry.GetRuler.GetHerHim]self as the true [ROOT.GetCountry.GetRulerTitle] of All China.\n\nBut receiving the #E Mandate of Heaven#! is only half of it; keeping it is an entirely different matter altogether. If [ROOT.GetCountry.GetRuler.GetFirstName] desires to see the House of [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] remembered as the greatest rulers that #E Zhongguo#! has ever had, then there is plenty that must be accomplished."
+ me_chinese_empire_90.a: "At long last, I have achieved what I set out to - the real work begins"
 
  #Tooltips
  missions_chinese_empire_task_15_10_slave_estates_on_salt: "We have at least 10 provinces with a slave estate and with the salt trade good."
@@ -243,25 +243,25 @@
  missions_chinese_empire_task_16_officers_have_10_in_main_attribute: "All of our office holders have a skill of at least 10 in their primary attribute."
  missions_chinese_empire_task_16_researchers_have_10_in_main_attribute: "All of our researchers have a skill of at least 10 in their primary attribute."
  missions_chinese_empire_task_7_every_province_in_nanzhong: "Every owned province in the region of Nanzhong will get:"
- missions_chinese_empire_task_4_claims: "TODO Claims"
- missions_chinese_empire_task_5_claims: "TODO Claims"
- missions_chinese_empire_task_6_claims: "TODO Claims"
- missions_chinese_empire_task_13_claims: "TODO Claims"
- missions_chinese_empire_task_14_claims: "TODO Claims"
- missions_chinese_empire_task_21_claims: "TODO Claims"
+ missions_chinese_empire_task_4_claims: "We will receive claims on the #Y Liaoxi#!, #Y Liaodong#!, #Y Lelang#!, #Y Lintun#! and #Y Xuantu#! areas."
+ missions_chinese_empire_task_5_claims: "We will receive claims on the #Y Nanhai#!, #Y Guiyang#!, #Y Hepu#!, #Y Zhuya#! and #Y Cangwu#! areas."
+ missions_chinese_empire_task_6_claims: "We will receive claims on the #Y Shushi#!, #Y Xinggu#!, #Y Yizhou#!, #Y Yuexi#! and #Y Zangke#! areas."
+ missions_chinese_empire_task_13_claims: "We will receive claims on the every province in the #Y Jin#! region."
+ missions_chinese_empire_task_14_claims: "We will receive claims on the #Y Qilin#! and #Y Tutikungshan#! areas."
+ missions_chinese_empire_task_21_claims: "We will receive claims on the #Y Luzon#! and #Y Kumaso#! areas."
  missions_chinese_empire_task_5_thirty_pops_appear_in_yang: "The Region of Yang will be colonized."
  missions_chinese_empire_task_6_thirty_pops_appear_in_jiao: "The Region of Jiao will be colonized."
  missions_chinese_empire_task_11_send_envoys_to_get_horses: "We will send envoys to get access to the Heavenly Horses."
  missions_chinese_empire_task_10_terracotta_army: "We will build a mausoleum protected by the Terracotta Army."
- me_chinese_empire_90_use_mandate_mechanic: "We will have to use the Mandate Mechanics to complete this tree." #Zorgo please colour the text, might also add it in the event text
+ me_chinese_empire_90_use_mandate_mechanic: "In order to be remembered as a worthy #Y Emperor#!, we will have to use the #T Mandate Mechanics#! to complete this tree.\n\nTo access these special interactions that are only available to the #Y Son of Heaven#!, click on the #T Celestial Empire View#!." #Zorgo please colour the text, might also add it in the event text
  
  #Treasures
  flying_horse_china: "Flying Horse Statue"
  flying_horse_china_desc: "TODO"
  
  #Terracotta  Army
- terracotta_army_wonder: "Mausoleum of the first Emperor"
- desc_terracotta_army_wonder: "TODO MOD"
+ terracotta_army_wonder: "Mausoleum of the First Emperor"
+ desc_terracotta_army_wonder: "Built as an army to accompany the First Emperor of China to the afterlife, thousands of painted terracotta statues have been constructed in this region."
  terracotta_army_mod: "$terracotta_army_wonder$"
  desc_terracotta_army_mod: "$desc_terracotta_army_wonder$"
  missions_chinese_empire_task_10_first_emperor_dead: "The first Emperor of China has died."
@@ -280,7 +280,7 @@
  divine_favour_china: "Divine Favor"
  magic_canal_china: "Magic Canal"
  desc_restored_wall_empire_missions: "TODO MOD"
- desc_civilization_effort_nanzhong: "TODO MOD"
+ desc_civilization_effort_nanzhong: "Our Imperial agents are doing their best to bring civilization to the barbaric mountain tribes."
  desc_imperial_road_china: "TODO MOD"
  desc_heavenly_horses_mod: "TODO MOD"
  desc_salt_manufactories_chinese_empire: "TODO MOD"
